CFK/tls/host_based/ingress-host-based.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-with-sni
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  tls:
    - hosts:
        - controlcenter.mycfk.com
        - ksqldb.mycfk.com
  rules:
    - host: controlcenter.mycfk.com
      http:
        paths:
          - backend:
              serviceName: controlcenter-0-internal
              servicePort: 9021
    - host: ksqldb.mycfk.com
      http:
        paths:
          - backend:
              serviceName: ksqldb-bootstrap
              servicePort: 8088
