CFK/tls/host_based/ingress-hostbased-v1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-sni
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  tls:
    - hosts:
        - kafka.mycfk.com
        - b0.mycfk.com
        - b1.mycfk.com
        - b2.mycfk.com
        - connect.mycfk.com
        - ksqldb.mycfk.com
        - controlcenter.mycfk.com
  rules:
    - host: kafka.mycfk.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service: 
                name: kafka-bootstrap
                port: 
                  number: 9092
    - host: b0.mycfk.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service: 
                name: kafka-0-internal
                port: 
                  number: 9092
    - host: b1.mycfk.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service: 
                name: kafka-1-internal
                port: 
                  number: 9092
    - host: b2.mycfk.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service: 
                name: kafka-2-internal
                port: 
                  number: 9092
    - host: connect.mycfk.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service: 
                name: connect-bootstrap
                port: 
                  number: 8083
    - host: ksqldb.mycfk.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service: 
                name: ksqldb-bootstrap
                port: 
                  number: 8088
    - host: controlcenter.mycfk.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service: 
                name: controlcenter-0-internal
                port: 
                  number: 9021
